--- a/public/css/style_2.css
+++ b/public/css/style_2.css
@@ -229,3 +229,30 @@ table thead>tr>th {
     background-color: #e9ecef;
     border-color: #dee2e6;
 }
+
+#notification {
+    position:fixed;
+    top:0px;
+    width:70%;
+    z-index:105;
+    text-align:center;
+    font-weight:normal;
+    font-size:50px;
+    font-weight:bold;
+    color:white;
+    background-color:#FF7800;
+    padding:5px;
+}
+#notification span.dismiss {
+    border:2px solid #FFF;
+    padding:0 5px;
+    cursor:pointer;
+    float:right;
+    margin-right:10px;
+    opacity: 0.5;
+}
+#notification a {
+    color:white;
+    text-decoration:none;
+    font-weight:bold
+}
